--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql-server-example",
   "version": "1.0.0",
-  "description": "",
+  "description": "anybody's guess",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -11,7 +11,9 @@
   "author": "Meteor Development Group",
   "license": "MIT",
   "dependencies": {
-    "apollo-server": "^2.0.5",
-    "graphql": "^0.13.2"
+    "apollo-server": "^2.2.0",
+    "graphql": "^14.0.2",
+    "lokijs": "^1.5.5",
+    "node-fetch": "^2.3.0"
   }
 }
